--- a/package.json
+++ b/package.json
@@ -4,8 +4,37 @@
   "description": "Bindings from the router in Angular 2 to the redux state",
   "main": "index.js",
   "scripts": {
+    "typings": "rimraf typings/ && typings install",
+    "build": "npm-run-all build:cjs build:es6",
+    "build:cjs": "tsc --p tsconfig.es5.json --diagnostics --pretty",
+    "build:es6": "tsc -m es2015   --outDir ./release/es6 --target ES6 -d --diagnostics --pretty",
+    "prepare": "npm-run-all prepare:*",
+    "prepare:es6": "cp -R ./release/es6 ./release/npm",
+    "prepare:package": "cp ./{package.json,README.md} ./release/npm",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC"
+  "peerDependencies": {
+    "rxjs": "5.0.0-beta.6",
+    "@angular/core": "^2.0.0-rc.1",
+    "@angular/router": "^2.0.0-rc.1"
+  },
+  "devDependencies": {
+    "@angular/common": "^2.0.0-rc.1",
+    "@angular/compiler": "^2.0.0-rc.1",
+    "@angular/core": "^2.0.0-rc.1",
+    "@angular/platform-browser": "^2.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "^2.0.0-rc.1",
+    "@angular/router": "^2.0.0-rc.1",
+    "core-js": "^2.2.2",
+    "ng2-redux": "^3.0.0-beta.0",
+    "npm-run-all": "^2.1.1",
+    "redux": "^3.5.2",
+    "rimraf": "^2.5.2",
+    "rxjs": "5.0.0-beta.6",
+    "typescript": "^1.8.10",
+    "typings": "^1.0.4",
+    "zone.js": "^0.6.8"
+  },
+  "author": "Dag Stuan",
+  "license": "MIT"
 }
