--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Bindings from the router in Angular 2 to the redux state",
   "main": "index.js",
   "repository": {
-    "type" : "git",
-    "url" : "git+https://github.com/dagstuan/ng2-redux-router.git"
+    "type": "git",
+    "url": "git+https://github.com/dagstuan/ng2-redux-router.git"
   },
   "scripts": {
     "typings": "rimraf typings/ && typings install",
@@ -19,7 +19,7 @@
   "peerDependencies": {
     "rxjs": "5.0.0-beta.6",
     "@angular/core": "^2.0.0-rc.1",
-    "@angular/router": "^2.0.0-rc.1"
+    "@angular/router": "^3.0.0-alpha.3"
   },
   "devDependencies": {
     "@angular/common": "^2.0.0-rc.1",
@@ -27,14 +27,14 @@
     "@angular/core": "^2.0.0-rc.1",
     "@angular/platform-browser": "^2.0.0-rc.1",
     "@angular/platform-browser-dynamic": "^2.0.0-rc.1",
-    "@angular/router": "^2.0.0-rc.1",
+    "@angular/router": "^3.0.0-alpha.3",
     "core-js": "^2.2.2",
     "ng2-redux": "^3.0.0-beta.0",
     "npm-run-all": "^2.1.1",
     "redux": "^3.5.2",
     "rimraf": "^2.5.2",
     "rxjs": "5.0.0-beta.6",
-    "typescript": "^1.8.10",
+    "typescript": "^1.9.0-dev.20160613-1.0",
     "typings": "^1.0.4",
     "zone.js": "^0.6.8"
   },
