--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng2-redux-router",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "Bindings from the router in Angular 2 to the redux state",
   "main": "index.js",
   "repository": {
@@ -29,7 +29,7 @@
     "@angular/platform-browser-dynamic": "^2.0.0-rc.1",
     "@angular/router": "^3.0.0-alpha.3",
     "core-js": "^2.2.2",
-    "ng2-redux": "^3.0.0-beta.0",
+    "ng2-redux": "^3.0.5",
     "npm-run-all": "^2.1.1",
     "redux": "^3.5.2",
     "rimraf": "^2.5.2",
