--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng2-redux-router",
-  "version": "0.0.7",
+  "version": "1.0.0",
   "description": "Bindings from the router in Angular 2 to the redux state",
   "main": "index.js",
   "repository": {
@@ -18,23 +18,22 @@
   },
   "peerDependencies": {
     "rxjs": "5.0.0-beta.6",
-    "@angular/core": "^2.0.0-rc.1",
-    "@angular/router": "^3.0.0-alpha.3"
+    "@angular/core": "^2.0.0-rc.2",
+    "@angular/router": "^3.0.0-alpha.7"
   },
   "devDependencies": {
-    "@angular/common": "^2.0.0-rc.1",
-    "@angular/compiler": "^2.0.0-rc.1",
-    "@angular/core": "^2.0.0-rc.1",
-    "@angular/platform-browser": "^2.0.0-rc.1",
-    "@angular/platform-browser-dynamic": "^2.0.0-rc.1",
-    "@angular/router": "^3.0.0-alpha.3",
-    "core-js": "^2.2.2",
-    "ng2-redux": "^3.0.5",
+    "@angular/core": "^2.0.0-rc.2",
+    "@angular/router": "^3.0.0-alpha.7",
+    "@angular/common": "^2.0.0-rc.2",
+    "@angular/platform-browser": "2.0.0-rc.2",
+    "@angular/compiler": "2.0.0-rc.2",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.2",
+    "ng2-redux": "^3.0.7",
     "npm-run-all": "^2.1.1",
     "redux": "^3.5.2",
     "rimraf": "^2.5.2",
     "rxjs": "5.0.0-beta.6",
-    "typescript": "^1.9.0-dev.20160613-1.0",
+    "typescript": "^1.8.10",
     "typings": "^1.0.4",
     "zone.js": "^0.6.8"
   },
