--- a/package.json
+++ b/package.json
@@ -18,17 +18,17 @@
   },
   "peerDependencies": {
     "rxjs": "5.0.0-beta.6",
-    "@angular/core": "^2.0.0-rc.4",
-    "@angular/router": "^3.0.0-beta.2"
+    "@angular/core": "2.0.0-rc.4 || 2.0.0-rc.5",
+    "@angular/router": "3.0.0-beta.2 || 3.0.0-rc.1"
   },
   "devDependencies": {
-    "@angular/core": "^2.0.0-rc.4",
-    "@angular/router": "^3.0.0-beta.2",
-    "@angular/common": "^2.0.0-rc.4",
-    "@angular/platform-browser": "2.0.0-rc.4",
-    "@angular/compiler": "2.0.0-rc.4",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
-    "ng2-redux": "^3.2.1-beta.1",
+    "@angular/core": "2.0.0-rc.5",
+    "@angular/router": "3.0.0-rc.1",
+    "@angular/common": "2.0.0-rc.5",
+    "@angular/platform-browser": "2.0.0-rc.5",
+    "@angular/compiler": "2.0.0-rc.5",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.5",
+    "ng2-redux": "^3.3.3",
     "npm-run-all": "^2.1.1",
     "redux": "^3.5.2",
     "rimraf": "^2.5.2",
