--- a/tsconfig.es6.json
+++ b/tsconfig.es6.json
@@ -2,18 +2,16 @@
   "compileOnSave": false,
   "buildOnSave": false,
   "compilerOptions": {
-    "outDir": "./lib/es5",
-    "target": "es5",
-    "module": "commonjs",
+    "outDir": "./lib/es6",
+    "target": "es6",
+    "module": "es6",
     "moduleResolution": "node",
     "sourceMap": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "removeComments": false,
     "declaration": true,
-    "types": [
-      "core-js"
-    ]
+    "types": []
   },
   "exclude": [
     "node_modules",
