--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -2,18 +2,16 @@
   "compileOnSave": false,
   "buildOnSave": false,
   "compilerOptions": {
-    "outDir": "./lib/es5",
+    "outDir": "./lib/esm",
     "target": "es5",
-    "module": "commonjs",
+    "module": "es2015",
     "moduleResolution": "node",
     "sourceMap": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "removeComments": false,
     "declaration": true,
-    "types": [
-      "core-js"
-    ]
+    "types": ["core-js"]
   },
   "exclude": [
     "node_modules",
