--- a/examples/counter/package.json
+++ b/examples/counter/package.json
@@ -4,6 +4,7 @@
   "description": "Counter example for ng2-redux-router",
   "main": "server.js",
   "scripts": {
+    "ngc": "ngc",
     "start": "webpack-dev-server -d --inline --progress --no-info --history-api-fallback --config webpack.config.js",
     "dev": "webpack-dev-server -d --inline --progress --no-info --history-api-fallback --config webpack.dev.config.js"
   },
@@ -23,28 +24,30 @@
   },
   "homepage": "https://github.com/wbuchwalter/ng2-redux#readme",
   "dependencies": {
-    "@angular/common": "^2.0.0-rc.6",
-    "@angular/compiler": "^2.0.0-rc.6",
-    "@angular/core": "2.0.0-rc.6",
-    "@angular/http": "^2.0.0-rc.6",
-    "@angular/platform-browser": "^2.0.0-rc.6",
-    "@angular/platform-browser-dynamic": "^2.0.0-rc.6",
-    "@angular/router": "^3.0.0-rc.2",
+    "@angular/common": "^2.0.0",
+    "@angular/compiler": "^2.0.0",
+    "@angular/core": "^2.0.0",
+    "@angular/http": "^2.0.0",
+    "@angular/platform-browser": "^2.0.0",
+    "@angular/platform-browser-dynamic": "^2.0.0",
+    "@angular/compiler-cli": "^0.6.2",
+    "@angular/platform-server": "^2.0.0",
+    "@angular/router": "^3.0.0",
     "core-js": "^2.4.0",
-    "ng2-redux": "^3.3.3",
-    "ng2-redux-router": "^1.1.0",
-    "redux": "^3.4.0",
+    "ng2-redux": "^4.0.0-beta.1",
+    "ng2-redux-router": "^1.2.0",
+    "redux": "^3.6.0",
     "redux-localstorage": "^0.4.0",
     "redux-logger": "^2.6.1",
-    "rxjs": "5.0.0-beta.11",
-    "zone.js": "^0.6.12"
+    "rxjs": "5.0.0-beta.12",
+    "zone.js": "^0.6.23"
   },
   "devDependencies": {
     "@types/core-js": "^0.9.32",
     "@types/node": "^6.0.38",
-    "awesome-typescript-loader": "^2.2.1",
+    "awesome-typescript-loader": "^2.2.4",
     "typescript": "^2.0.2",
     "webpack": "^1.9.11",
-    "webpack-dev-server": "^1.9.0"
+    "webpack-dev-server": "^1.15.2"
   }
 }
