--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng2-redux-router",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "description": "Bindings from the router in Angular 2 to the redux state",
   "main": "lib/es5/index.js",
   "module": "lib/esm/index.js",
@@ -10,29 +10,31 @@
   },
   "scripts": {
     "build": "rimraf ./release && npm run build:es6 && npm run build:es5 && npm run build:esm",
-    "build:es6": "tsc --p tsconfig.es6.json --diagnostics --pretty",
-    "build:esm": "tsc --p tsconfig.esm.json --diagnostics --pretty",
-    "build:es5": "tsc --p tsconfig.json --diagnostics --pretty"
+    "build:es6": "ngc --p tsconfig.es6.json --diagnostics --pretty",
+    "build:esm": "ngc --p tsconfig.esm.json --diagnostics --pretty",
+    "build:es5": "ngc --p tsconfig.json --diagnostics --pretty"
   },
   "peerDependencies": {
-    "@angular/core": "2.0.0-rc.4 || 2.0.0-rc.5 || 2.0.0-rc.6",
-    "@angular/router": "3.0.0-beta.2 || 3.0.0-rc.1 || 3.0.0-rc.2"
+    "@angular/core": "^2.0.0",
+    "@angular/router": "^3.0.0"
   },
   "devDependencies": {
-    "@angular/common": "2.0.0-rc.6",
-    "@angular/compiler": "2.0.0-rc.6",
-    "@angular/core": "2.0.0-rc.6",
-    "@angular/platform-browser": "2.0.0-rc.6",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.6",
-    "@angular/router": "3.0.0-rc.2",
+    "@angular/common": "^2.0.0",
+    "@angular/compiler": "^2.0.0",
+    "@angular/compiler-cli": "^0.6.2",
+    "@angular/core": "^2.0.0",
+    "@angular/platform-browser": "^2.0.0",
+    "@angular/platform-browser-dynamic": "^2.0.0",
+    "@angular/platform-server": "^2.0.0",
+    "@angular/router": "^3.0.0",
     "@types/core-js": "^0.9.32",
     "@types/jasmine": "^2.2.33",
-    "ng2-redux": "^3.3.9",
-    "redux": "^3.5.2",
+    "ng2-redux": "^4.0.0-beta.1",
+    "redux": "^3.6.0",
     "rimraf": "^2.5.4",
-    "rxjs": "5.0.0-beta.11",
+    "rxjs": "5.0.0-beta.12",
     "typescript": "^2.0.2",
-    "zone.js": "^0.6.17"
+    "zone.js": "^0.6.23"
   },
   "author": "Dag Stuan",
   "license": "MIT"
