--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "ng2-redux-router",
-  "version": "1.3.1",
+  "version": "1.3.3",
   "description": "Bindings from the router in Angular 2 to the redux state",
-  "main": "lib/es5/index.js",
-  "module": "lib/esm/index.js",
+  "main": "./lib/es5/index.js",
+  "module": "./lib/esm/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/dagstuan/ng2-redux-router.git"
