--- a/examples/counter/package.json
+++ b/examples/counter/package.json
@@ -24,30 +24,30 @@
   },
   "homepage": "https://github.com/wbuchwalter/ng2-redux#readme",
   "dependencies": {
-    "@angular/common": "^2.0.0",
-    "@angular/compiler": "^2.0.0",
-    "@angular/core": "^2.0.0",
-    "@angular/http": "^2.0.0",
-    "@angular/platform-browser": "^2.0.0",
-    "@angular/platform-browser-dynamic": "^2.0.0",
-    "@angular/compiler-cli": "^0.6.2",
-    "@angular/platform-server": "^2.0.0",
-    "@angular/router": "^3.0.0",
+    "@angular/common": "^2.1.2",
+    "@angular/compiler": "^2.1.2",
+    "@angular/core": "^2.1.2",
+    "@angular/http": "^2.1.2",
+    "@angular/platform-browser": "^2.1.2",
+    "@angular/platform-browser-dynamic": "^2.1.2",
+    "@angular/compiler-cli": "^2.1.2",
+    "@angular/platform-server": "^2.1.2",
+    "@angular/router": "^3.1.2",
     "core-js": "^2.4.0",
-    "ng2-redux": "^4.0.0-beta.1",
-    "ng2-redux-router": "^1.3.3",
+    "ng2-redux": "^4.1.0",
+    "ng2-redux-router": "^2.0.0",
     "redux": "^3.6.0",
     "redux-localstorage": "^0.4.0",
-    "redux-logger": "^2.6.1",
+    "redux-logger": "^2.7.4",
     "rxjs": "5.0.0-beta.12",
-    "zone.js": "^0.6.23"
+    "zone.js": "^0.6.26"
   },
   "devDependencies": {
-    "@types/core-js": "^0.9.32",
-    "@types/node": "^6.0.38",
+    "@types/core-js": "^0.9.34",
+    "@types/node": "^6.0.46",
     "awesome-typescript-loader": "^2.2.4",
-    "typescript": "^2.0.2",
-    "webpack": "^1.9.11",
-    "webpack-dev-server": "^1.15.2"
+    "typescript": "^2.0.8",
+    "webpack": "^1.13.3",
+    "webpack-dev-server": "^1.16.2"
   }
 }
