--- a/examples/counter/package.json
+++ b/examples/counter/package.json
@@ -1,7 +1,7 @@
 {
   "name": "counter-redux",
   "version": "0.0.0",
-  "description": "Counter example for ng2-redux-router",
+  "description": "Counter example for @angular-redux/router",
   "main": "server.js",
   "scripts": {
     "ngc": "ngc",
@@ -10,43 +10,44 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/wbuchwalter/ng2-redux.git"
+    "url": "https://github.com/angular-redux/router.git"
   },
   "keywords": [
     "angular",
     "redux",
     "ng2-redux",
+    "angular-redux",
     "webpack"
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/wbuchwalter/ng2-redux/issues"
+    "url": "https://github.com/angular-redux/router/issues"
   },
-  "homepage": "https://github.com/wbuchwalter/ng2-redux#readme",
+  "homepage": "https://github.com/angular-redux/router#readme",
   "dependencies": {
-    "@angular/common": "^2.1.2",
-    "@angular/compiler": "^2.1.2",
-    "@angular/core": "^2.1.2",
-    "@angular/http": "^2.1.2",
-    "@angular/platform-browser": "^2.1.2",
-    "@angular/platform-browser-dynamic": "^2.1.2",
-    "@angular/compiler-cli": "^2.1.2",
-    "@angular/platform-server": "^2.1.2",
-    "@angular/router": "^3.1.2",
+    "@angular/common": "^2.4.1",
+    "@angular/compiler": "^2.4.1",
+    "@angular/core": "^2.4.1",
+    "@angular/http": "^2.4.1",
+    "@angular/platform-browser": "^2.4.1",
+    "@angular/platform-browser-dynamic": "^2.4.1",
+    "@angular/compiler-cli": "^2.4.1",
+    "@angular/platform-server": "^2.4.1",
+    "@angular/router": "^3.4.1",
     "core-js": "^2.4.0",
-    "ng2-redux": "^4.1.0",
-    "ng2-redux-router": "^2.0.0",
+    "@angular-redux/core": "^5.1.0",
+    "@angular-redux/router": "^2.0.0-alpha.1",
     "redux": "^3.6.0",
     "redux-localstorage": "^0.4.0",
     "redux-logger": "^2.7.4",
-    "rxjs": "5.0.0-beta.12",
-    "zone.js": "^0.6.26"
+    "rxjs": "^5.0.1",
+    "zone.js": "^0.7.2"
   },
   "devDependencies": {
     "@types/core-js": "^0.9.34",
     "@types/node": "^6.0.46",
     "awesome-typescript-loader": "^2.2.4",
-    "typescript": "^2.0.8",
+    "typescript": "2.0.10",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
   }
