--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular-redux/router",
-  "version": "2.0.0-alpha.1",
+  "version": "2.0.0-alpha.3",
   "description": "Keep your Angular 2+ router state in Redux.",
   "main": "./lib/es5/index.js",
   "module": "./lib/esm/index.js",
@@ -10,6 +10,7 @@
     "url": "git+https://github.com/angular-redux/router.git"
   },
   "scripts": {
+    "prepublish": "npm run build",
     "build": "rimraf ./lib && npm run build:es5 && npm run build:esm && npm run build:es6",
     "postbuild": "rimraf \"src/**/*.ngfactory.ts\"",
     "build:es6": "ngc -p tsconfig.es6.json && npm run postbuild",
@@ -31,7 +32,7 @@
     "@angular/router": "^3.4.1",
     "@types/core-js": "^0.9.34",
     "@types/jasmine": "^2.5.37",
-    "@angular-redux/core": "^5.0.0",
+    "@angular-redux/store": "^5.1.0",
     "redux": "^3.6.0",
     "rimraf": "^2.5.4",
     "rxjs": "^5.0.1",
