Changes to update to angular 4. (#10)

--- a/examples/counter/package.json
+++ b/examples/counter/package.json
@@ -25,29 +25,28 @@
   },
   "homepage": "https://github.com/angular-redux/router#readme",
   "dependencies": {
-    "@angular/common": "^2.4.1",
-    "@angular/compiler": "^2.4.1",
-    "@angular/core": "^2.4.1",
-    "@angular/http": "^2.4.1",
-    "@angular/platform-browser": "^2.4.1",
-    "@angular/platform-browser-dynamic": "^2.4.1",
-    "@angular/compiler-cli": "^2.4.1",
-    "@angular/platform-server": "^2.4.1",
-    "@angular/router": "^3.4.1",
+    "@angular/common": "^4.0.0",
+    "@angular/compiler": "^4.0.0",
+    "@angular/core": "^4.0.0",
+    "@angular/http": "^4.0.0",
+    "@angular/platform-browser": "^4.0.0",
+    "@angular/platform-browser-dynamic": "^4.0.0",
+    "@angular/compiler-cli": "^4.0.0",
+    "@angular/router": "^4.0.0",
     "core-js": "^2.4.0",
-    "@angular-redux/core": "^5.1.0",
-    "@angular-redux/router": "^2.0.0-alpha.1",
+    "@angular-redux/store": "^6.1.0-alpha.1",
+    "@angular-redux/router": "^6.1.0-alpha.0",
     "redux": "^3.6.0",
     "redux-localstorage": "^0.4.0",
     "redux-logger": "^2.7.4",
     "rxjs": "^5.0.1",
-    "zone.js": "^0.7.2"
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
     "@types/core-js": "^0.9.34",
     "@types/node": "^6.0.46",
-    "awesome-typescript-loader": "^2.2.4",
-    "typescript": "2.0.10",
+    "awesome-typescript-loader": "^3.1.2",
+    "typescript": "^2.1.0",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
   }
