--- a/tsconfig.es6.json
+++ b/tsconfig.es6.json
@@ -11,7 +11,7 @@
     "experimentalDecorators": true,
     "removeComments": false,
     "declaration": true,
-    "types": []
+    "lib" : ["es2015", "es2015.iterable", "dom"]
   },
   "exclude": [
     "lib",
