[Fix #17] Toolchain updates (#18)
* [Fix #17] Toolchain updates

* Updated to Typescript 2.4.1
* Added package-lock.json for npm 5+ users
* Turned on Typescript strict mode.

* 6.3.1 release prep

--- a/tsconfig.es6.json
+++ b/tsconfig.es6.json
@@ -11,7 +11,8 @@
     "experimentalDecorators": true,
     "removeComments": false,
     "declaration": true,
-    "lib" : ["es2015", "es2015.iterable", "dom"]
+    "lib" : ["es2015", "es2015.iterable", "dom"],
+    "skipLibCheck": true
   },
   "exclude": [
     "lib",
