--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -11,7 +11,8 @@
     "experimentalDecorators": true,
     "removeComments": false,
     "declaration": true,
-    "lib" : ["es2015", "es2015.iterable", "dom"]
+    "lib" : ["es2015", "es2015.iterable", "dom"],
+    "skipLibCheck": true
   },
   "exclude": [
     "lib",
