--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "redux": "^3.6.0",
     "rimraf": "^2.5.4",
     "rxjs": "^5.0.1",
-    "typescript": "^2.4.1",
+    "typescript": "2.4.2",
     "zone.js": "^0.8.4"
   },
   "author": "Dag Stuan",
