--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular-redux/router",
-  "version": "6.4.0",
+  "version": "6.3.1",
   "description": "Keep your Angular 2+ router state in Redux.",
   "main": "./lib/es5/index.js",
   "module": "./lib/esm/index.js",
@@ -11,7 +11,8 @@
   },
   "scripts": {
     "prepublish": "npm run build",
-    "build": "rimraf ./lib && npm run build:es5 && npm run build:esm && npm run build:es6",
+    "build":
+      "rimraf ./lib && npm run build:es5 && npm run build:esm && npm run build:es6",
     "postbuild": "rimraf \"src/**/*.ngfactory.ts\"",
     "build:es6": "ngc -p tsconfig.es6.json && npm run postbuild",
     "build:esm": "ngc -p tsconfig.esm.json  && npm run postbuild",
@@ -35,7 +36,7 @@
     "redux": "^3.6.0",
     "rimraf": "^2.5.4",
     "rxjs": "^5.0.1",
-    "typescript": "^2.4.1",
+    "typescript": "2.4.2",
     "zone.js": "^0.8.4"
   },
   "author": "Dag Stuan",
