--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular-redux/router",
-  "version": "6.3.1",
+  "version": "6.4.0",
   "description": "Keep your Angular 2+ router state in Redux.",
   "main": "./lib/es5/index.js",
   "module": "./lib/esm/index.js",
@@ -11,8 +11,7 @@
   },
   "scripts": {
     "prepublish": "npm run build",
-    "build":
-      "rimraf ./lib && npm run build:es5 && npm run build:esm && npm run build:es6",
+    "build": "rimraf ./lib && npm run build:es5 && npm run build:esm && npm run build:es6",
     "postbuild": "rimraf \"src/**/*.ngfactory.ts\"",
     "build:es6": "ngc -p tsconfig.es6.json && npm run postbuild",
     "build:esm": "ngc -p tsconfig.esm.json  && npm run postbuild",
