--- a/package.json
+++ b/package.json
@@ -11,31 +11,32 @@
   },
   "scripts": {
     "prepublish": "npm run build",
-    "build": "rimraf ./lib && npm run build:es5 && npm run build:esm && npm run build:es6",
+    "build":
+      "rimraf ./lib && npm run build:es5 && npm run build:esm && npm run build:es6",
     "postbuild": "rimraf \"src/**/*.ngfactory.ts\"",
     "build:es6": "ngc -p tsconfig.es6.json && npm run postbuild",
     "build:esm": "ngc -p tsconfig.esm.json  && npm run postbuild",
     "build:es5": "ngc -p tsconfig.json && npm run postbuild"
   },
   "peerDependencies": {
-    "@angular/core": "^2.1.2 || ^5.0.0",
-    "@angular/router": "^3.0.0 || ^5.0.0"
+    "@angular/core": "^2.1.2 || ^4.0.0 || ^5.0.0",
+    "@angular/router": "^3.0.0 || ^4.0.0 || ^5.0.0"
   },
   "devDependencies": {
-    "@angular-redux/store": "^7.0.0",
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/compiler-cli": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@angular/router": "^5.0.0",
+    "@angular-redux/store": "^6.3.0",
+    "@angular/common": "^4.0.0",
+    "@angular/compiler": "^4.0.0",
+    "@angular/compiler-cli": "^4.0.0",
+    "@angular/core": "^4.0.0",
+    "@angular/platform-browser": "^4.0.0",
+    "@angular/platform-browser-dynamic": "^4.0.0",
+    "@angular/router": "^4.0.0",
     "@types/core-js": "^0.9.39",
     "@types/jasmine": "^2.5.37",
     "redux": "^3.6.0",
     "rimraf": "^2.5.4",
     "rxjs": "^5.0.1",
-    "typescript": "2.4.2",
+    "typescript": "^2.4.1",
     "zone.js": "^0.8.4"
   },
   "author": "Dag Stuan",
