v7 release - Angular v5 Support
* Update to Angular 5 compiler
* Update RxJS, change to use let-able operators
* Requires @angular-redux/store 7+

** Breaking Change **

* NgReduxRouterModule now needs to be imported with `.forRoot`

** before **

``ts
@NgModule({
          declarations: [AppComponent],
            imports: [
                RouterModule.forRoot(appRoutes),
                /* .... */
                NgReduxRouterModule  ],
                  bootstrap: [AppComponent]
                  })
export class AppModule {}
``

** after **

``ts
@NgModule({
          declarations: [AppComponent],
            imports: [
                RouterModule.forRoot(appRoutes),
                /* .... */
                NgReduxRouterModule.forRoot()
              ],
                bootstrap: [AppComponent]
                })
export class AppModule {}
```

--- a/tsconfig.es6.json
+++ b/tsconfig.es6.json
@@ -11,14 +11,14 @@
     "experimentalDecorators": true,
     "removeComments": false,
     "declaration": true,
-    "lib" : ["es2015", "es2015.iterable", "dom"],
+    "lib": ["es2015", "es2015.iterable", "dom"],
     "skipLibCheck": true
   },
-  "exclude": [
-    "lib",
-    "node_modules",
-    "spec",
-    "release",
-    "examples"
-  ]
+  "exclude": ["lib", "node_modules", "spec", "release", "examples"],
+  "angularCompilerOptions": {
+    "generateCodeForLibraries": false,
+    "strictMetadataEmit": true,
+    "genDir": ".compiled",
+    "annotationsAs": "decorators"
+  }
 }
