--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
   },
   "exclude": ["lib", "node_modules", "spec", "release", "examples"],
   "angularCompilerOptions": {
-    "generateCodeForLibraries": false,
+    "generateCodeForLibraries": true,
     "strictMetadataEmit": true,
     "genDir": ".compiled",
     "annotationsAs": "decorators"
