--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@angular-redux/router",
-  "version": "6.4.1",
+  "version": "7.0.0-2",
   "description": "Keep your Angular 2+ router state in Redux.",
-  "main": "./lib/es5/index.js",
-  "module": "./lib/esm/index.js",
-  "typings": "./lib/es5/index.d.ts",
+  "main": "./lib/es5/src/index.js",
+  "module": "./lib/esm/src/index.js",
+  "typings": "./lib/es5/src/index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/angular-redux/router.git"
@@ -18,25 +18,25 @@
     "build:es5": "ngc -p tsconfig.json && npm run postbuild"
   },
   "peerDependencies": {
-    "@angular/core": "^2.1.2 || ^4.0.0 || ^5.0.0",
-    "@angular/router": "^3.0.0 || ^4.0.0 || ^5.0.0"
+    "@angular/core": "^5.0.0",
+    "@angular/router": "^5.0.0"
   },
   "devDependencies": {
-    "@angular-redux/store": "^6.3.0",
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/compiler-cli": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
+    "@angular-redux/store": "^7.0.0",
+    "@angular/common": "^5.0.0",
+    "@angular/compiler": "^5.0.0",
+    "@angular/compiler-cli": "^5.0.0",
+    "@angular/core": "^5.0.0",
+    "@angular/platform-browser": "^5.0.0",
+    "@angular/platform-browser-dynamic": "^5.0.0",
+    "@angular/router": "^5.0.0",
     "@types/core-js": "^0.9.39",
     "@types/jasmine": "^2.5.37",
     "redux": "^3.6.0",
     "rimraf": "^2.5.4",
-    "rxjs": "^5.0.1",
-    "typescript": "^2.4.1",
-    "zone.js": "^0.8.4"
+    "rxjs": "^5.5.2",
+    "typescript": "2.4.2",
+    "zone.js": "^0.8.18"
   },
   "author": "Dag Stuan",
   "license": "MIT"
